--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <!-- <div
+        id="rasa-chat-widget"
+        data-websocket-url="http://localhost:5005/webhooks/rest/webhook"
+      ></div> -->
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -46,5 +51,9 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <!-- <script
+    src="https://unpkg.com/@rasahq/rasa-chat"
+    type="application/javascript"
+  ></script> -->
   <script type="module" src="/src/index.jsx"></script>
 </html>
